discussion/kv_engine/141636/141636_rev47_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Use ifconfig in testapp [2.3/3]

Define the bootstrap interfaces in testapp and explicitly define
the other interfaces on top of those by using ifconfig

Change-Id: Iad7d4b960cdc85fed8a595621137a50c04b3026e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:03:16.000000000
Message: 
Uploaded patch set 47: Patch Set 46 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 08:09:33.000000000
Message: 
Patch Set 47: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36722/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36722/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31389/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31389/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11482/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11482/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11334/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11334/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10407/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10407/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11760/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11760/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19341/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19341/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9759/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9759/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9759/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8354/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
